--- a/Class-06/home-2.html
+++ b/Class-06/home-2.html
@@ -77,10 +77,10 @@
             <div class="section-padding">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-5">
                             <img src="assets/img/Homepage_version_02.png" alt="">
                         </div>
-                        <div class="col-md-5 col-md-offset-1">
+                        <div class="col-md-6 col-md-offset-1">
                             <div class="home-page-2-about">
                                 <h3>The Fastest Growing Digital Marketing Agency</h3>
                                 <p>I take great pride in owning a company that has received the level of success andnlar accolades that have been bestowed upon WebiMax.grow tactical strategic theme areas with customer directed ideas. Distinctively productivate transparent core competencies rather than prospective e-services.</p>
@@ -107,9 +107,29 @@
                             <div class="single-service-box-2">
                                 <div class="single-service-box-2-tablecell">
                                     <div class="service-icon-2">
-                                        <i class="fa fa-windows"></i>
+                                       <i class="fa fa-line-chart"></i>
                                     </div>
                                     <h3>Content marketing</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <a class="single-service-box-2">
+                                <div class="single-service-box-2-tablecell">
+                                    <div class="service-icon-2">
+										<i class="fa fa-users"></i>
+                                    </div>
+                                    <h3>Web Analytics</h3>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="single-service-box-2">
+                                <div class="single-service-box-2-tablecell">
+                                    <div class="service-icon-2">
+                                       <i class="fa fa-cloud-upload"></i>
+                                    </div>
+                                    <h3>Virtual Marketing</h3>
                                 </div>
                             </div>
                         </div>
@@ -117,29 +137,9 @@
                             <div class="single-service-box-2">
                                 <div class="single-service-box-2-tablecell">
                                     <div class="service-icon-2">
-                                        <i class="fa fa-windows"></i>
+                                        <i class="fa fa-laptop"></i>
                                     </div>
-                                    <h3>Content marketing</h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="single-service-box-2">
-                                <div class="single-service-box-2-tablecell">
-                                    <div class="service-icon-2">
-                                        <i class="fa fa-windows"></i>
-                                    </div>
-                                    <h3>Content marketing</h3>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="single-service-box-2">
-                                <div class="single-service-box-2-tablecell">
-                                    <div class="service-icon-2">
-                                        <i class="fa fa-windows"></i>
-                                    </div>
-                                    <h3>Content marketing</h3>
+                                    <h3>Inbound Marketing</h3>
                                 </div>
                             </div>
                         </div>
